--- a/src/container/Header/Header.css
+++ b/src/container/Header/Header.css
@@ -809,8 +809,33 @@
     }
 
     .header__side-tag,
-    .header__deco,
+    .header__deco {
+        display: none;
+    }
+
     .header__socials {
+        position: fixed;
+        left: 0.4rem;
+        top: 30%;
+        transform: translateY(-50%);
+        flex-direction: column;
+        gap: 0.35rem;
+        display: flex;
+        z-index: 50;
+    }
+
+    .header__social-icon {
+        width: 30px;
+        height: 30px;
+        border-radius: 8px;
+    }
+
+    .header__social-icon svg {
+        width: 14px;
+        height: 14px;
+    }
+
+    .header__social-icon::after {
         display: none;
     }
 }
